# ring-attention

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KERNEL_OPTIMIZATIONS.md  PLAN.md  README.md  RING_ATTENTION.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/commands/profile-optimize/: SKILL.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/bench_attention/: CMakeLists.txt  bench_attention.cu
apps/hello_mpi_cuda/: CMakeLists.txt  main.cu
apps/ring_attention_cli/: CMakeLists.txt  main.cu
docs/design/: decode_mode.md  perf_model.tex
reference/ring_attention_ref/: __init__.py  fixtures.py  inference.py  oracle.py  ring.py  zigzag.py
reference/tests/: conftest.py  test_fixtures.py  test_golden.py  test_inference.py  test_oracle.py  test_ring.py  test_smoke.py  test_striped.py  test_zigzag.py
reference/tests/fixtures/: cp2_causal_zigzag.pt  cp2_noncausal_seq.pt  cp4_causal_zigzag.pt  cp4_noncausal_seq.pt
scripts/: analyze_profiles.sh  coverage.sh  plot_bench.py  plot_ring2d_compare.py  plot_scaling.py  plot_seqlen_capacity.py
scripts/comm_probe/: comm_probe.cpp
scripts/env/: activate.sh
scripts/slurm/: bench_decode.sbatch  bench_decode_mn.sbatch  bench_kernel_opt.sbatch  bench_ring.sbatch  bench_sweep.sbatch  comm_probe.sbatch  gpu_tests.sbatch  nccl_debug_p8.sbatch  nccl_transport_check.sbatch  partition_compare.sbatch  profile.sbatch  profile_decode.sbatch  profile_multinode.sbatch  ring2d_sweep.sbatch  round15_check.sbatch  seqlen_capacity.sbatch  strong_scaling.sbatch  topology_probe.sbatch  validate.sbatch  validate_decode.sbatch  validate_prefill.sbatch  validate_ring2d.sbatch  weak_scaling.sbatch
src/: CMakeLists.txt  attention.hpp  attention_decode.cu  attention_step.cu  attention_step_fp16.cu  common.cuh  cpu_attention.cpp  cpu_attention.hpp  decode_op.cu  decode_op.hpp  device_tensor.cu  device_tensor.hpp  flash_attention.cu  flash_attention_fp16.cu  kv_cache.cu  kv_cache.hpp  naive_attention.cu  nccl_utils.hpp  ring2d_schedule.cpp  ring2d_schedule.hpp  ring_decode.cu  ring_decode.hpp  ring_gen.hpp  ring_loop.cu  ring_loop.hpp  ring_loop_common.hpp  ring_loop_fp16.cu  ring_partition.cpp  ring_partition.hpp
tests/: CMakeLists.txt  test_attention_step.cu  test_attention_step_bias_segs.cu  test_attention_step_fp16.cu  test_attention_step_segmented.cu  test_cpu_attention.cpp  test_decode_op.cu  test_device_tensor.cu  test_flash_attention.cu  test_flash_attention_fp16.cu  test_gen_elem.cpp  test_kv_cache.cu  test_naive_attention.cu  test_ring2d_schedule.cpp  test_ring_decode.cu  test_ring_partition.cpp  test_smoke.cu
