[project]
name = "ring-attention-ref"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "mypy>=1.20.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ring-attention-pytorch>=0.5",
    "ruff>=0.15.11",
    "torch>=2.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["reference/ring_attention_ref"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["ring_attention_ref"]

[tool.pytest.ini_options]
testpaths = ["reference/tests"]
addopts = "-ra --strict-markers --cov=ring_attention_ref --cov-report=term-missing --cov-report=xml:coverage.xml"

[tool.coverage.run]
source = ["ring_attention_ref"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
python_version = "3.11"
strict = true
files = ["reference"]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
